fix text alignment

--- a/responsive.css
+++ b/responsive.css
@@ -675,14 +675,14 @@
 
         position: absolute !important;
         top: auto !important;
-        left: 2% !important;
+        left: 80% !important;
 
         margin-left: 12px !important;
     }
 
     .info-paragraph {
         position: absolute !important;
-        bottom: 20px !important;
+        bottom: 10px !important;
         top: auto !important;
         left: 20px !important;
         right: 20px !important;
